# storage-tools

./: IMPLEMENTATION.md  Makefile  README.md  ROADMAP.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
storage_tools/: __init__.py  analyzer.py  cli.py  large_files.py  utils.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_large_files.py  test_utils.py
