[metadata]
name = storage-tools
version = 0.1.0

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    docs*

[flake8]
max-line-length = 100
extend-ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info,
    .mypy_cache,
    .pytest_cache
per-file-ignores =
    __init__.py:F401
    storage_tools/cli.py:C901
    storage_tools/utils.py:C901
max-complexity = 10
